# python-ocr

./: README.md  config.ini  main.py  pyproject.toml
output_files/: result_demo.txt
services/: img_extraction.py  pdf_extraction.py
tests/: test_main.py
tests/resources/output_files/: image_test.txt
utils/: constants.py  extension_validation.py  logger.py  output_optimization.py  path_checker.py  pre_processing.py  text_output.py
