[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["nguyenlq1990 <lequangnguyen.mu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pytesseract = "^0.3.5"
yapf = "^0.30.0"
isort = "^5.4.2"
opencv-python = "^4.4.0"
pdf2image = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
